change buid name

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zr</groupId>
-    <artifactId>jinkens-demo</artifactId>
+    <artifactId>netty-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>jinkens-demo</name>
+    <name>netty-demo</name>
     <url>http://maven.apache.org</url>
 
 
